--- a/vercel-fresh.json
+++ b/vercel-fresh.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+  "name": "ontdek-polen-fresh",
   "buildCommand": "npm run build && node postbuild.js",
   "outputDirectory": "dist/public",
   "installCommand": "npm install",
